<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoo_name"
        android:textStyle="bold"
        android:textSize="36sp"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/lion_imageview"
                android:layout_width="wrap_content"
                android:layout_height="246dp"
                android:contentDescription="@string/lion_content_description"
                android:src="@drawable/lion" />

            <ImageView
                android:id="@+id/gorilla_imageview"
                android:layout_width="wrap_content"
                android:layout_height="246dp"
                android:contentDescription="@string/gorilla_content_description"
                android:src="@drawable/gorilla"/>

            <ImageView
                android:id="@+id/marmot_imageview"
                android:layout_width="wrap_content"
                android:layout_height="246dp"
                android:contentDescription="@string/marmot_content_description"
                android:src="@drawable/marmot"/>

            <ImageView
                android:id="@+id/humpback_imageview"
                android:layout_width="wrap_content"
                android:layout_height="246dp"
                android:contentDescription="@string/humpback_content_description"
                android:src="@drawable/humpback" />

            <ImageView
                android:id="@+id/elephant_imageview"
                android:layout_width="wrap_content"
                android:layout_height="246dp"
                android:contentDescription="@string/elephant_content_description"
                android:src="@drawable/elephant" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>